fix(themes): dark mode highlight colors

--- a/packages/themes/src/presets/default.css
+++ b/packages/themes/src/presets/default.css
@@ -84,7 +84,7 @@
   --scalar-color-blue: #4eb3ec;
   --scalar-color-orange: #ff8d4d;
   --scalar-color-purple: #b191f9;
-  --scalar-color-accent: #8ab4f8;
+  --scalar-color-accent: #00aeff;
   --scalar-link-color: var(--scalar-color-1);
   --scalar-link-color-hover: var(--scalar-link-color);
 
@@ -111,7 +111,7 @@
     --scalar-color-purple: color(display-p3 0.321569 0.011765 0.819608 / 1.0);
   }
   .dark-mode {
-    --scalar-color-accent: color(display-p3 0.541176 0.705882 0.972549 / 1.0);
+    --scalar-color-accent: color(display-p3 0.07 0.67 1);
     --scalar-color-green: color(display-p3 0.0 0.713725 0.282353 / 1.0);
     --scalar-color-red: color(display-p3 0.862745 0.105882 0.098039 / 1.0);
     --scalar-color-yellow: color(display-p3 1.0 0.788235 0.05098 / 1.0);
